--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+            <Button
+                android:id="@+id/get_app_usage_stats_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Get App Usage Statistics">
+            </Button>
             <TextView
                 android:id="@+id/tvUsageStats"
                 android:layout_width="match_parent"
