--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPampas">#F3F1EB</color>
+    <color name="colorSunGlow">#FCCE4B</color>
+    <color name="colorAnzac">#E1AA47</color>
+    <color name="colorGreenMist">#D6D4AF</color>
+    <color name="colorLimedSpruce">#374E4E</color>
+    <color name="colorOuterSpace">#273A3A</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGrey">#EAEAEA</color>
 </resources>
