--- a/app/src/main/res/layout/data_fragment.xml
+++ b/app/src/main/res/layout/data_fragment.xml
@@ -4,50 +4,126 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorLimedSpruce"
     tools:context=".fragments.DataFragment">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true">
-
+        android:fillViewport="true"
+        android:layout_margin="15dp">
         <LinearLayout
-
             android:layout_margin="30dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/title"
-                android:textSize="20dp"
-                android:textColor="@color/colorOuterSpace"/>
+                android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="match_parent"
-                android:layout_marginVertical="20dp"
-                android:layout_height="150dp"
-                app:srcCompat="@drawable/ic_undraw_collecting" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bree_serif"
+                    android:text="@string/title"
+                    android:textColor="@color/colorWhite"
+                    android:textSize="22dp" />
 
-            <Button
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="80dp"
+                    android:layout_gravity="right"
+                    android:layout_marginLeft="10dp"
+                    android:foregroundGravity="right"
+                    app:srcCompat="@drawable/ic_undraw_romantic_getaway" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/get_app_usage_stats_btn"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Get App Usage Statistics">
-            </Button>
-            <TextView
-                android:id="@+id/tvUsageStats"
+                android:visibility="invisible"
+                android:layout_height="180dp"
+                android:layout_marginTop="30dp"
+                android:orientation="vertical"
+                android:gravity="bottom"
+                android:padding="10dp"
+                android:background="@drawable/ic_get_app_data"
+                >
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bree_serif"
+                    android:text="@string/spp_stat_title"
+                    android:textColor="@color/colorWhite"
+                    android:gravity="center"
+                    android:textSize="18sp"
+                    />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bree_serif"
+                    android:text="@string/app_stat_subtitle"
+                    android:textColor="@color/colorWhite"
+                    android:gravity="center"
+                    android:textSize="15sp"
+                    android:layout_marginBottom="15dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/layout_chart_data_usage"
+                android:visibility="invisible"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:scrollbars="vertical"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:background="@drawable/card"
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:fontFamily="@font/bree_serif"
+                    android:textColor="@color/colorGreenMist"
+                    android:text="@string/header_stats"/>
+
+                <com.anychart.AnyChartView
+                    android:id="@+id/chart_data_usage"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
+                    android:background="@color/colorOuterSpace"
+                    />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:orientation="vertical"
+                android:padding="10dp"
+                android:background="@drawable/card"
+                >
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:fontFamily="@font/bree_serif"
+                    android:textColor="@color/colorGreenMist"
+                    android:text="@string/header_stats"/>
+
+                <TextView
+                    android:id="@+id/tvUsageStats"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:scrollbars="vertical"
+                    android:fontFamily="@font/roboto"
+                    android:textColor="@color/colorWhite"
+                    android:text="@string/app_usage_stats"/>
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 
