--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -40,6 +40,7 @@
                         android:id="@+id/username_text_edit"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:fontFamily="@font/roboto"
                         android:textColorHighlight="@color/colorOuterSpace"
                         android:textColorLink="@color/colorOuterSpace" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -56,6 +57,7 @@
                         android:id="@+id/password_text_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:fontFamily="@font/roboto"
                         android:inputType="textPassword"
                         android:textColorHighlight="@color/colorOuterSpace"
                         android:textColorLink="@color/colorOuterSpace" />
@@ -67,6 +69,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorLimedSpruce"
+                android:fontFamily="@font/roboto"
                 android:text="LOGIN"
                 android:textColor="@color/colorWhite" />
 
@@ -76,24 +79,33 @@
                 android:layout_marginVertical="20dp"
                 android:background="@color/colorGrey"/>
 
-            <TextView
-                android:id="@+id/sign_in_text_top"
+            <LinearLayout
+                android:id="@+id/sign_in_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/sign_in_text_top"
-                android:textAlignment="center"
-                android:textColor="@color/colorOuterSpace"
-                android:textSize="18sp" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/sign_in_text_bottom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/sign_in_text_bottom"
-                android:textAlignment="center"
-                android:textColor="@color/colorAnzac"
-                android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/sign_in_text_top"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bree_serif"
+                    android:text="@string/sign_in_text_top"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorOuterSpace"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/sign_in_text_bottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bree_serif"
+                    android:text="@string/sign_in_text_bottom"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorAnzac"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <ImageView
