--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
-            android:id="@+id/sign_in_linear_layout"
+            android:id="@+id/sign_up_linear_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -40,6 +40,7 @@
                         android:id="@+id/username_text_edit"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:fontFamily="@font/roboto"
                         android:textColorHighlight="@color/colorOuterSpace"
                         android:textColorLink="@color/colorOuterSpace" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -56,6 +57,7 @@
                         android:id="@+id/email_text_edit"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:fontFamily="@font/roboto"
                         android:textColorHighlight="@color/colorOuterSpace"
                         android:textColorLink="@color/colorOuterSpace" />
                 </com.google.android.material.textfield.TextInputLayout>
@@ -72,6 +74,7 @@
                         android:id="@+id/password_text_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:fontFamily="@font/roboto"
                         android:inputType="textPassword"
                         android:textColorHighlight="@color/colorOuterSpace"
                         android:textColorLink="@color/colorOuterSpace" />
@@ -89,6 +92,7 @@
                         android:id="@+id/password_confirm_text_edit_text"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:fontFamily="@font/roboto"
                         android:inputType="textPassword"
                         android:textColorHighlight="@color/colorOuterSpace"
                         android:textColorLink="@color/colorOuterSpace" />
@@ -96,12 +100,13 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/sign_in_btn"
+                android:id="@+id/sign_up_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/colorLimedSpruce"
                 android:text="SIGN UP"
-                android:textColor="@color/colorWhite" />
+                android:textColor="@color/colorWhite"
+                android:fontFamily="@font/roboto" />
 
             <View
                 android:layout_width="match_parent"
@@ -109,36 +114,46 @@
                 android:layout_marginVertical="20dp"
                 android:background="@color/colorGrey"/>
 
-            <TextView
-                android:id="@+id/sign_up_text_top"
+            <LinearLayout
+                android:id="@+id/sign_up_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/sign_up_text_top"
-                android:textAlignment="center"
-                android:textColor="@color/colorOuterSpace"
-                android:textSize="18sp" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/sign_up_text_bottom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/sign_up_text_bottom"
-                android:textAlignment="center"
-                android:textColor="@color/colorAnzac"
-                android:textSize="14sp" />
+                <TextView
+                    android:id="@+id/sign_up_text_top"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bree_serif"
+                    android:text="@string/sign_up_text_top"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorOuterSpace"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/sign_up_text_bottom"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/bree_serif"
+                    android:text="@string/sign_up_text_bottom"
+                    android:textAlignment="center"
+                    android:textColor="@color/colorAnzac"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <ImageView
             android:id="@+id/bottom_image_view"
             android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:contentDescription="undraw image"
             android:src="@drawable/ic_undraw_winners"
 
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/sign_up_linear_layout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
