--- a/app/src/main/res/layout/sign_in_fragment.xml
+++ b/app/src/main/res/layout/sign_in_fragment.xml
@@ -54,7 +54,7 @@
                     android:hint="@string/hint_password">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/password_text_edit_text"
+                        android:id="@+id/password_text_edit"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:fontFamily="@font/roboto"
